kubernetes/apps/home/windmill/app/route.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: windmill
  annotations:
    glance/icon: "https://cdn.jsdelivr.net/gh/homarr-labs/dashboard-icons/png/windmill.png"
    glance/id: "Automation"
    glance/name: "Windmill"
    glance/show: "true"
spec:
  hostnames:
    - "windmill.${SECRET_DOMAIN}"
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: windmill-app
          port: 8000
